Fix: Improve color scheme, text contrast, and size adjustments in footer and navbar (#82)

--- a/style.css
+++ b/style.css
@@ -47,10 +47,13 @@ section {
   padding: 0.9rem 3.5rem;
   cursor: pointer;
   font-size: 1.7rem;
+  background-color: #3f10ea;
 }
 
 .btn:hover {
   background: var(--purple);
+  background-color: #f03c0b;
+  color: white;
 }
 
 header {
@@ -71,12 +74,14 @@ header .logo {
   font-size: 3rem;
   color: #3f10ea;
   font-weight: bolder;
+  font-size: 2.5rem;
 }
 header .logo:hover {
   font-size: 3rem;
   color: #f03c0b;
   font-weight: bolder;
   text-decoration: none;
+  font-size: 2.55rem;
 }
 
 header .logo span {
@@ -87,21 +92,26 @@ header .navbar a {
   font-size: 2rem;
   padding: 0 1.5rem;
   color: #666;
+  font-size: 1.8rem;
 }
 
 header .navbar a:hover {
   color: var(--red);
   text-decoration: none;
+  color: #3f10ea;
 }
 
 header .icons a {
   font-size: 2.5rem;
   color: #333;
   margin-left: 1.5rem;
+  font-size: 2.2rem;
 }
 
 header .icons a:hover {
   color: var(--purple);
+  color: #3f10ea;
+  text-decoration: none;
 }
 
 header #toggler {
@@ -125,6 +135,7 @@ header .fa-bars {
   background: url(images/background-home.png) no-repeat;
   background-size: cover;
   background-position: center;
+  min-height: 110vh;
 }
 
 .home .content {
@@ -134,6 +145,9 @@ header .fa-bars {
 .home .content h3 {
   font-size: 5rem;
   color: #333;
+  font-size: 4.5rem;
+  font-weight: 600;
+  line-height: 6rem;
 }
 
 .home .content span {
@@ -148,6 +162,8 @@ header .fa-bars {
   color: #999;
   padding: 1rem 0;
   line-height: 1.5;
+  margin-bottom: 2rem;
+  color: grey;
 }
 
 /* media queries */
@@ -316,4 +332,60 @@ header .fa-bars {
     .sidebar {
         display: none;
     }
+}
+
+/* Features section */
+.features h2{
+  font-weight: 600;
+}
+.features-card img{
+  width:80%;
+  height: 40%;
+  object-fit: cover;
+}
+.features-card h3{
+  color: #3f10ea;
+}
+.features-card p{
+  margin-bottom: 0;
+  color: grey;
+}
+
+/* testimonials features section */
+.testimonials h2{
+  font-weight: 600;
+}
+.testimonial-card img{
+  height: 9rem;
+  width: 9rem;
+  border: 0.3rem solid white;
+}
+.testimonial-card h3{
+  color: #3f10ea;
+  font-size: 2rem;
+}
+.testimonial-card p{
+  color: grey;
+}
+
+/* Footer section */
+.footer{
+  background-color: #607D8B;
+  padding-bottom: 2rem;
+}
+.footer-section h3{
+  font-size: 2.5rem;
+}
+.footer-section ul li{
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.footer-bottom p{
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+.footer-bottom{
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
